--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-fastapi==0.115.6
-uvicorn[standard]==0.32.1
-sqlalchemy==2.0.36
-alembic==1.14.0
-jinja2==3.1.4
-python-multipart==0.0.19
-pydantic==2.10.3
-pytest==8.3.4
-httpx==0.28.1
+fastapi>=0.115,<1.0
+starlette>=0.40,<1.0
+pydantic>=2.9,<3.0
+uvicorn[standard]>=0.30,<1.0
+ortools>=9.10
