--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ starlette>=0.40,<1.0
 pydantic>=2.9,<3.0
 uvicorn[standard]>=0.30,<1.0
 ortools>=9.10
+SQLAlchemy>=2.0,<3.0
+alembic>=1.13,<2.0
+httpx>=0.28,<1.0
