--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ ortools>=9.10
 SQLAlchemy>=2.0,<3.0
 alembic>=1.13,<2.0
 httpx>=0.28,<1.0
+bcrypt>=4.2,<5.0
+psycopg[binary]>=3.2,<4.0
 jinja2
 pytest
